# floweaver

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  DEVELOPING.md  LICENSE  MANIFEST.in  Pipfile  README.rst  RELEASE.rst  ROUTING_TREE_STATUS.md  debug_c_catchall.py  debug_compatibility.py  debug_partition_tree_attr.py  environment.yml  flit.ini  meta.yaml  postBuild  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/: Makefile  api.rst  changes.rst  compiler.rst  conf.py  contributing.rst  dataset.rst  index.rst  installation.rst  introduction.rst  jupyter.rst  make.bat  migrating-sankeyview-to-floweaver.rst  requirements.txt  sdd.rst  weave.rst
docs/cookbook/: forwards-backwards.ipynb  fruit_processes.csv  global-steel-flows.csv  global-steel-processes.csv  hybrid-sankey-diagrams-paper-fruit-example.ipynb  imports-exports.ipynb  layout-optimisation-2.ipynb  layout-optimisation-3.ipynb  layout-optimisation.ipynb  scale.ipynb  us-energy-consumption-processes.csv  us-energy-consumption.csv  us-energy-consumption.ipynb  watari-global-steel-flows.rst  watari-transformed-data-Japan-2019.csv
docs/demo_animation/: Makefile
docs/gallery/: index.rst
docs/introduction/: Introductory example.ipynb
docs/tutorials/: Quickstart.ipynb  Showing fewer flows.ipynb  colour-scales.ipynb  dimension-tables.ipynb  holiday_data.csv  index.ipynb  quickstart.ipynb  simple_fruit_sales.csv  simple_fruit_sales_processes.csv  system-boundary.ipynb
examples/: Fruit - complete example.ipynb  UK_Energy_Sankey.ipynb  UK_Energy_Sankey_Solved.ipynb  UK_Energy_Sankey_data.xlsx
floweaver/: __init__.py  augment_view_graph.py  color_scales.py  dataset.py  dataset_manipulation.py  diagram_optimisation.py  dummy_nodes.py  hierarchy.py  layered_graph.py  ordering.py  results_graph.py  sankey_data.py  sankey_definition.py  sankey_view.py  save_sankey.py  weave.py
js/: package-lock.json  package.json  rollup.config.js  run_spec.js
js/src/: color.js  execute.js  index.js  tree.js
js/test/: test_execute.js
more_testing/: test1.ipynb  test2.ipynb
sankeyview/: __init__.py  augment_view_definition.py  augment_view_graph.py  bundle.py  dataset.py  dummy_nodes.py  graph_to_sankey.py  grouping.py  hierarchy.py  jupyter.py  jupyter_notebook.py  layered_graph.py  low_level_graph.py  node.py  node_group.py  ordering.py  partition.py  results_graph.py  sankey_definition.py  sankey_view.py  save_sankey.py  server.py  utils.py  view_definition.py  view_graph.py
scripts/: timing_execute_weave.py
src/floweaver/: __init__.py  augment_view_graph.py  color_scales.py  dataset.py  dummy_nodes.py  graph_to_sankey.py  hierarchy.py  layered_graph.py  ordering.py  partition.py  results_graph.py  sankey_data.py  sankey_definition.py  save_sankey.py  sentinel.py  view_graph.py  weave.py
test/: conftest.py  helpers.py  hypothesis_strategies.py  matchers.py  test_augment_view_definition.py  test_augment_view_graph.py  test_bundle.py  test_color_scales.py  test_compiler_combined_router.py  test_compiler_partition_router.py  test_compiler_property_based_equivalence.py  test_compiler_rules.py  test_compiler_selection_router.py  test_compiler_spec.py  test_compiler_tree.py  test_compiler_weave_equivalence.py  test_dataset.py  test_dummy_nodes.py  test_execute.py  test_filter_overlap.py  test_grouping.py  test_hierarchy.py  test_js_executor_equivalence.py  test_layered_graph.py  test_low_level_graph.py  test_node_position_optimisation.py  test_ordering.py  test_partition.py  test_results_graph.py  test_sankey_data.py  test_sankey_definition.py  test_sankey_view.py  test_view_definition.py  test_view_graph.py  test_weave.py
(+22 files in other folders)
