[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floweaver"
dynamic = ["version"]
description = "View flow data as Sankey diagrams."
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Rick Lupton", email = "mail@ricklupton.name" },
]
keywords = ["Sankey", "diagram", "flow", "data", "visualisation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "networkx>=2.1",
    "attrs>=17.4",
    "palettable",
]

[project.optional-dependencies]
test = [
    "pytest",
    "matplotlib",
    "pytest-cov",
]
docs = [
    "sphinx>=5,<8",
    "nbsphinx>=0.9",
    "nbconvert>=7",
    "jupyter_client",
    "ipykernel",
    "ipysankeywidget",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/ricklupton/floweaver"
Documentation = "https://floweaver.readthedocs.io"
Repository = "https://github.com/ricklupton/floweaver"
Issues = "https://github.com/ricklupton/floweaver/issues"

[tool.hatch.version]
path = "src/floweaver/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/floweaver",
    "/test",
    "LICENSE",
    "README.rst",
]

[tool.hatch.build.targets.wheel]
packages = ["src/floweaver"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
